fix image placement on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,8 @@ h1 {
 h2 {
   color: #02014f;
   letter-spacing: 0.4px;
-  font-size: 40px;
-  font-family: "Gilroy Light";
+  font-size: 50px;
+  font-family: "Gilroy ExtraBold";
   text-align: left;
   vertical-align: middle;
 }
